--- a/CarParkingOOCamp2015May/CarParkingOOCamp2015May.csproj
+++ b/CarParkingOOCamp2015May/CarParkingOOCamp2015May.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Boy.cs" />
     <Compile Include="Car.cs" />
     <Compile Include="ParkingLot.cs" />
     <Compile Include="Program.cs" />
