--- a/UnitTestCarParkingOOCamp2015May/UnitTestCarParkingOOCamp2015May.csproj
+++ b/UnitTestCarParkingOOCamp2015May/UnitTestCarParkingOOCamp2015May.csproj
@@ -39,6 +39,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="xunit.abstractions, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
       <HintPath>..\packages\xunit.abstractions.2.0.0\lib\net35\xunit.abstractions.dll</HintPath>
@@ -61,6 +62,8 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="UnitTestParkingBoyParkCar.cs" />
+    <Compile Include="UnitTestParkingBoyPickCar.cs" />
     <Compile Include="UnitTestPickCar.cs" />
     <Compile Include="UnitTestParkCar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
