add manager who can pick/park car and manage three kinds of boys

--- a/UnitTestCarParkingOOCamp2015May/UnitTestCarParkingOOCamp2015May.csproj
+++ b/UnitTestCarParkingOOCamp2015May/UnitTestCarParkingOOCamp2015May.csproj
@@ -50,6 +50,7 @@
     <Compile Include="UnitTestOrdinaryParkingBoy.cs" />
     <Compile Include="UnitTestParkingLot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTestManager.cs" />
     <Compile Include="UnitTestSuperParkingBoy.cs" />
     <Compile Include="UnitTestSmartParkingBoy.cs" />
   </ItemGroup>
