--- a/CarParkingOOCamp2015May/CarParkingOOCamp2015May.csproj
+++ b/CarParkingOOCamp2015May/CarParkingOOCamp2015May.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Manager.cs" />
     <Compile Include="ParkingBoyBase.cs" />
     <Compile Include="SuperParkingBoy.cs" />
     <Compile Include="SmartParkingBoy.cs" />
