--- a/UnitTestCarParkingOOCamp2015May/UnitTestCarParkingOOCamp2015May.csproj
+++ b/UnitTestCarParkingOOCamp2015May/UnitTestCarParkingOOCamp2015May.csproj
@@ -48,6 +48,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="UnitTestOrdinaryParkingBoy.cs" />
+    <Compile Include="UnitTestDirector.cs" />
     <Compile Include="UnitTestParkingLot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestManager.cs" />
